--- a/package.json
+++ b/package.json
@@ -13,19 +13,29 @@
         "@emotion/styled": "^11.10.6",
         "@mui/icons-material": "^5.11.11",
         "@mui/material": "^5.11.12",
+        "@mui/x-date-pickers": "^6.0.1",
+        "@reduxjs/toolkit": "^1.9.3",
+        "@types/axios": "^0.14.0",
+        "@types/react-router-dom": "^5.3.3",
+        "axios": "^1.3.4",
         "bootstrap": "^5.2.3",
+        "dayjs": "^1.11.7",
+        "i18next": "^22.4.11",
         "material-icons": "^1.13.2",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.2",
         "react-dom": "^18.2.0",
         "react-elastic-carousel": "^0.11.5",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.2",
+        "react-scroll": "^1.8.9",
         "react-swipeable-views": "^0.14.0",
         "sass": "^1.58.3"
     },
     "devDependencies": {
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
+        "@types/react-scroll": "^1.8.6",
         "@vitejs/plugin-react": "^3.1.0",
         "typescript": "^4.9.3",
         "vite": "^4.1.0"
