--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-bootstrap": "^2.7.2",
         "react-dom": "^18.2.0",
         "react-elastic-carousel": "^0.11.5",
+        "react-i18next": "^12.2.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.2",
         "react-scroll": "^1.8.9",
