--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "axios": "^1.3.4",
         "bootstrap": "^5.2.3",
         "dayjs": "^1.11.7",
-        "i18next": "^22.4.11",
+        "i18next": "^22.4.12",
+        "i18next-browser-languagedetector": "^7.0.1",
+        "i18next-http-backend": "^2.2.0",
         "material-icons": "^1.13.2",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.2",
