--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@mui/x-date-pickers": "^6.0.1",
         "@reduxjs/toolkit": "^1.9.3",
         "@types/axios": "^0.14.0",
+        "@types/react-redux": "^7.1.25",
         "@types/react-router-dom": "^5.3.3",
         "axios": "^1.3.4",
         "bootstrap": "^5.2.3",
@@ -23,7 +24,9 @@
         "i18next": "^22.4.12",
         "i18next-browser-languagedetector": "^7.0.1",
         "i18next-http-backend": "^2.2.0",
+        "install": "^0.13.0",
         "material-icons": "^1.13.2",
+        "npm": "^9.6.2",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.2",
         "react-dom": "^18.2.0",
@@ -33,6 +36,7 @@
         "react-router-dom": "^6.8.2",
         "react-scroll": "^1.8.9",
         "react-swipeable-views": "^0.14.0",
+        "redux": "^4.2.1",
         "sass": "^1.58.3"
     },
     "devDependencies": {
